overflow fix on index

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,7 @@
 html{
   overflow: hidden;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
   cursor:none;
 }
 
